# paper-trading-bot

./: .gitignore  DECISIONS.md  EXPERIMENTS.md  README.md  pyproject.toml
config/: strategy.yaml
src/trading_bot/: __init__.py  config.py  main.py
src/trading_bot/backtest/: __init__.py  costs.py  engine.py  models.py  period_evaluation.py  position_sizing.py  risk_controls.py  risk_manager.py  run_period_evaluation.py
src/trading_bot/broker/: __init__.py  alpaca_client.py  base.py  models.py
src/trading_bot/data/: __init__.py  coverage.py  (+9 more)
tests/: test_alpaca_open_orders.py  test_alpaca_paper_broker.py  test_backtest_daily_loss_limit.py  test_backtest_engine.py  test_backtest_execution_costs.py  test_backtest_position_sizing.py  test_backtest_session_risk.py  test_broker_models.py  test_config.py  test_coordinator_position_state.py  test_cost_accounting.py  test_cost_metrics.py  test_costs.py  test_coverage.py  test_data_validation.py  test_date_ranges.py  test_download_range.py  test_durable_execution_lifecycle.py  test_execution_service.py  test_execution_settings.py  test_indicators.py  test_market_clock.py  test_market_signal_config.py  test_market_signal_cycle.py  test_market_signal_state.py  test_order_reconciliation.py  test_order_state.py  test_period_evaluation.py  test_position_lifecycle.py  test_position_sizing.py  test_position_state.py  test_process_lock.py  test_range_audit.py  test_range_merge.py  test_range_output.py  test_range_source.py  test_recent_bar_source.py  test_reconciliation.py  test_reconciliation_cli.py  test_reconciliation_config.py  (+18 more)
(+27 files in other folders)
